<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.impl.MainActivity"

    >
  <android.support.constraint.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@android:color/white"
      >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#f0f0f0"
        android:elevation="12dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

      <android.support.constraint.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          >

        <ImageView
            android:id="@+id/imageView_logo"
            android:layout_width="100dp"
            android:layout_height="52dp"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/testio1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/button_logout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            />

        <ImageButton
            android:id="@+id/button_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="2dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_logout"
            android:contentDescription="@string/logout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/Widget.AppCompat.ImageButton"
            />

      </android.support.constraint.ConstraintLayout>


    </android.support.v7.widget.Toolbar>


    <!--android:outlineProvider="bounds"-->
    <!--android:clipToPadding="false"-->
    <!--android:layout_marginStart="8dp"-->
    <!--android:layout_marginEnd="8dp"-->

    <!--<include-->
    <!--layout="@layout/item_servers"-->
    <!--android:id="@+id/linearLayout2"-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_height="wrap_content"-->
    <!--app:layout_constraintLeft_toLeftOf="parent"-->
    <!--app:layout_constraintRight_toRightOf="parent"-->
    <!--app:layout_constraintTop_toBottomOf="@+id/toolbar"-->
    <!--/>-->

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:elevation="12dp"
        android:orientation="horizontal"
        android:padding="8dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        >
      <TextView
          android:id="@+id/textView_server"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_marginEnd="8dp"
          android:layout_marginStart="8dp"
          android:layout_weight="2"
          android:text="@string/server"
          android:textAlignment="viewStart"
          android:textAppearance="@style/TextAppearance.AppCompat.Medium"
          />

      <TextView
          android:id="@+id/textView_distance"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_marginEnd="8dp"
          android:layout_marginStart="8dp"
          android:layout_weight="1"
          android:text="@string/distance"
          android:textAlignment="viewEnd"
          android:textAppearance="@style/TextAppearance.AppCompat.Medium"
          />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.0"
        >

    </android.support.v7.widget.RecyclerView>
  </android.support.constraint.ConstraintLayout>


</android.support.design.widget.CoordinatorLayout>
